--- a/Loader/pages/page3.html
+++ b/Loader/pages/page3.html
@@ -9,7 +9,7 @@
 </head>
 <style>
     body {
-        background-image: url("../images/fish.webp")
+        background-image: url("../images/Fish.webp")
     }
 </style>
 
