--- a/Loader/pages/Dog5.html
+++ b/Loader/pages/Dog5.html
@@ -9,7 +9,7 @@
 </head>
 <style>
     body {
-        background-image: url("../images/dog5.webp")
+        background-image: url("../images/Dog5.webp")
     }
 </style>
 
